[package]
name = "cumkannon"
version = "0.1.0"
authors = ["mib <mib@mib.dev>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["serve"] }
sailfish = { version = "0.3.3", default-features = false, features = ["derive", "perf-inline"] }
rand = { version = "0.8.3", default-features = false, features = ["small_rng"] }
