[package]
name = "cumkannon"
version = "0.1.0"
authors = ["mib <mib@mib.dev>"]
edition = "2018"

[dependencies]
sailfish = { version = "0.3.3", default-features = false, features = ["derive", "perf-inline"] }
rand = { version = "0.8.3", default-features = false, features = ["small_rng"] }
lazy_static = "1.4.0"
warp = "0.3.2"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
